--- a/food-donator-frontend/src/app/components/shared/card/card.component.css
+++ b/food-donator-frontend/src/app/components/shared/card/card.component.css
@@ -46,7 +46,6 @@ th {
   height: calc(100% - 40px);
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   align-content: center;
 }
 
@@ -66,6 +65,10 @@ th {
 
 .card, .carousel-item {
   margin: 0px !important;
+}
+
+.card-content {
+  overflow-y: scroll;
 }
 
 .card {
